crates/keron-lang/tests/corpus/errors/check/forward_ref.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unknown variable `second`
  --> 1:13
  |
1 | val first = second + 1
  |             ^^^^^^
